fix: 产品评级纠错选框颜色

--- a/pages/feedback/feedback.wxml
+++ b/pages/feedback/feedback.wxml
@@ -12,7 +12,7 @@
 
         <view>
             <view wx:for="{{error_type}}" data-id="{{item[0]}}" size="20" bindtap="selectError" class="feedback-list">
-                <icon type="{{item[0]==id?'success':'circle'}}" size="25"/>
+                <icon type="{{item[0]==id?'success':'circle'}}" size="25" color="rgb(80,130,240)"/>
                 <text>{{item[1]}}</text>
             </view>
 
