--- a/pages/product-list/product-list.wxml
+++ b/pages/product-list/product-list.wxml
@@ -17,7 +17,7 @@
         <view class="product-item" wx:for="{{product_list}}" data-pid="{{item.pid}}" bindtap="toDetail">
             <view class="product-item-tit">{{item.product}}</view>
             <view class="product-item-con">
-                <view class="type type-bb">{{item.complexity}}</view>
+                <view class="type type-{{item.complexity=='简单'?'aa':item.complexity=='中等'?'bb':'cc'}}">{{item.complexity}}</view>
                 <view class="span-item">{{item.insurer_abbreviation}}</view>
                 <view class="span-item">{{item.product_class}}</view>
                 <view class="clear"></view>
