fix: 如果产品架构为传统型，则不显示投资功能列表

--- a/pages/product-grade/product-grade.wxml
+++ b/pages/product-grade/product-grade.wxml
@@ -71,7 +71,7 @@
 
 
 
-    <view class="pro-detial-mess">
+    <view class="pro-detial-mess" wx:if="{{product_structure!=='传统型'}}">
         <view class="pro-detial-mess-tit">
             <view class="proli-item">投资</view>
         </view>
