A Xian has modified some css-style files for text alignment

--- a/app.wxss
+++ b/app.wxss
@@ -65,6 +65,7 @@ page {
   color: #fff;
   font-size: 38rpx;
   text-align: center;
+  margin-top: 20rpx;
 }
 .blue-button-gray {
   width: 100%;
@@ -293,6 +294,7 @@ page {
   float: right;
   color:#4682f0;
   text-align: right;
+  line-height: 118rpx;
 }
 .pro-price .agreement .go-icon {
   width: 25rpx;
