--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="logo"><image src="resouce.wenme.cc/static/images/logo.png" ></image></view>
+  <view class="logo"><image src="https://resource.wenme.cc/static/images/logo.png" ></image></view>
   <view>
     <view class="search-box">
       <input class="pro-search-txt" placeholder="想了解什么保险？" bindinput="bindKeyword"/>
