feat: ”产品详情“页修改了基础信息与购买信息下的信息需求；

--- a/pages/product-detail/product-detail.wxss
+++ b/pages/product-detail/product-detail.wxss
@@ -32,3 +32,39 @@ page {
   background-position: 46rpx center;
   text-indent: 50rpx;
 }
+
+.company-info-row {
+  min-height:30rpx;
+  line-height:30rpx;
+  font-size: 24rpx;
+  padding: 10rpx 0;
+}
+
+.company-info-row .gradecon {
+  width: 350rpx;
+  float: left;
+  color: #ff7800;
+  position:relative;
+}
+.company-info-row .gradecon.insured_cover {
+  float: right;
+  width: auto;
+  font-size:24rpx;
+  color:#aaaaaa;
+}
+.company-info-row .gradecon.insured_cover image {
+  width: 24rpx;
+  margin: 0 4rpx;
+}
+.company-info-row .gradecon image {
+  width:162rpx;
+  height:24rpx;
+}
+.company-info-row .gradecon .no-grade {
+  font-size:24rpx;
+}
+
+.product-item-con {
+  font-size: 24rpx;
+  line-height: 30rpx;
+}
