--- a/pages/product-detail/product-detail.wxml
+++ b/pages/product-detail/product-detail.wxml
@@ -2,7 +2,27 @@
 <view>
 	
 	<view class="part-one">
-		<view class="pro-company-name"><view class="productname padd-lr-30" >{{product}}</view></view>
+		<view class="pro-company-name">
+            <view class="productname padd-lr-30" >
+                {{product}}
+                <view class="company-info-row posi-rela">
+                    <view class="gradecon">
+                        <view wx:if="{{rating_star === '未有评级'}}" class="no-grade">{{rating_star}}</view>
+                        <image wx:else src="{{rating_star}}"></image>
+                    </view>
+                    <view class="insured_cover gradecon" wx:if="{{insured_cover_icon.length}}">
+                        保障
+                        <image wx:for="{{insured_cover_icon}}" src="{{item}}"></image>
+                    </view>
+                </view>
+                <view class="product-item-con">
+                    <view class="type">{{product_structure}}</view>
+                    <view class="span-item">{{insurer}}</view>
+                    <view class="span-item">{{product_class}}</view>
+                    <view class="clear"></view>
+                </view>
+            </view>
+        </view>
 	</view>
 	<view class="wrap border-tope9">
 		<view class="pro-company-chose left" bindtap="toCompany">
@@ -26,70 +46,70 @@
         <view class="padd-lr-30">
 			
 			<view class="{{baseInfo?'show':'hidden'}}">
+                <view class="pro-detial-mess-row">
+                    <view class="messlable">保险公司</view>
+                    <view class="messcon">{{insurer}}</view>
+                    <!--<view wx:if="{{product_class_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{product_class_hintid}}"></view>-->
+                </view>
 				<view class="pro-detial-mess-row">
 					<view class="messlable">产品类型</view>
 					<view class="messcon">{{product_class}}</view>
-					<view wx:if="{{product_class_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{product_class_hintid}}"></view>
+					<!--<view wx:if="{{product_class_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{product_class_hintid}}"></view>-->
 				</view>
 	
 				<view class="pro-detial-mess-row">
 					<view class="messlable">产品架构</view>
 					<view class="messcon">{{product_structure}}</view>
-					<view wx:if="{{product_structure_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{product_structure_hintid}}"></view>
+					<!--<view wx:if="{{product_structure_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{product_structure_hintid}}"></view>-->
 				</view>
 	
 				<view class="pro-detial-mess-row">
-					<view class="messlable">备案年份</view>
-					<view class="messcon">{{filing_year}}年</view>
-					<view wx:if="{{filing_year_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{filing_year_hintid}}"></view>
+					<view class="messlable">上市时间</view>
+					<view class="messcon">{{filing_year}}</view>
+					<!--<view wx:if="{{filing_year_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{filing_year_hintid}}"></view>-->
 				</view>
+
+                <view class="pro-detial-mess-row">
+                    <view class="messlable">销售对象</view>
+                    <view class="messcon">{{target_audience}}</view>
+                    <!--<view wx:if="{{filing_year_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{filing_year_hintid}}"></view>-->
+                </view>
 				
-				<view class="pro-detial-mess-row">
-					<view class="messlable">保险期间</view>
-					<view class="messcon">{{policy_period}}</view>
-					<view wx:if="{{policy_period_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{policy_period_hintid}}"></view>
-				</view>
-	
-				<view class="pro-detial-mess-row">
-					<view class="messlable">犹豫期</view>
-					<view class="messcon">{{cooling_off_period}}</view>
-					<view wx:if="{{cooling_off_period_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{cooling_off_period_hintid}}"></view>
-				</view>
-	
 			<view class="clear"></view>
 			</view>
 			
 			<view class="{{purchaseInfo?'show':'hidden'}}">
 				<view class="pro-detial-mess-row">
-					<view class="messlable">是否在售</view>
+					<view class="messlable">销售状态</view>
 					<view class="messcon">{{sale_available}}</view>
-					<view wx:if="{{sale_available_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{sale_available_hintid}}"></view>
+					<!--<view wx:if="{{sale_available_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{sale_available_hintid}}"></view>-->
 				</view>
 	
 				<view class="pro-detial-mess-row">
-					<view class="messlable">销售渠道</view>
-					<view class="messcon">{{channel}}</view>
-					<view wx:if="{{channel_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{channel_hintid}}"></view>
+					<view class="messlable">投保范围</view>
+					<view class="messcon">{{insured_age_range}}</view>
+					<!--<view wx:if="{{channel_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{channel_hintid}}"></view>-->
 				</view>
-	
-				<view class="pro-detial-mess-row">
-					<view class="messlable">被保人最小投保年龄</view>
-					<view class="messcon">{{insured_minimum_age}}</view>
-					<view wx:if="{{insured_minimum_age_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{insured_minimum_age_hintid}}"></view>
+
+                <view class="pro-detial-mess-row">
+                    <view class="messlable">保险期间</view>
+                    <view class="messcon">{{policy_period}}</view>
+                    <!--<view wx:if="{{policy_period_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{policy_period_hintid}}"></view>-->
+                </view>
+
+                <view class="pro-detial-mess-row">
+					<view class="messlable">交费方式</view>
+					<view class="messcon">{{ways_to_pay}}</view>
+					<!--<view wx:if="{{insured_renewal_maximum_age_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{insured_renewal_maximum_age_hintid}}"></view>-->
 				</view>
-	
-				<view class="pro-detial-mess-row">
-					<view class="messlable">被保人最大投保年龄</view>
-					<view class="messcon">{{insured_maximum_age}}</view>
-					<view wx:if="{{insured_maximum_age_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{insured_maximum_age_hintid}}"></view>
-				</view>
-	
-				<view class="pro-detial-mess-row">
-					<view class="messlable">被保人最大续保年龄</view>
-					<view class="messcon">{{insured_renewal_maximum_age}}</view>
-					<view wx:if="{{insured_renewal_maximum_age_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{insured_renewal_maximum_age_hintid}}"></view>
-				</view>
-			<view class="clear"></view>
+
+                <view class="pro-detial-mess-row">
+                    <view class="messlable">犹豫期</view>
+                    <view class="messcon">{{cooling_off_period}}</view>
+                    <!--<view wx:if="{{cooling_off_period_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{cooling_off_period_hintid}}"></view>-->
+                </view>
+
+                <view class="clear"></view>
 			</view>
             
 
