--- a/pages/company-detail/company-detail.wxml
+++ b/pages/company-detail/company-detail.wxml
@@ -40,28 +40,28 @@
                 <view class="pro-detial-mess-row">
                     <view class="messlable">财政年度</view>
                     <view class="messcon">{{finance_year}}</view>
-					<view wx:if="{{finance_year_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{finance_year_hintid}}"></view>
+					<!--<view wx:if="{{finance_year_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{finance_year_hintid}}"></view>-->
                 <view class="clear"></view>
                 </view>
 
                 <view class="pro-detial-mess-row">
                     <view class="messlable">原保险保费收入</view>
                     <view class="messcon">{{original_premium}}亿</view>
-					<view wx:if="{{original_premium_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{original_premium_hintid}}"></view>
+					<!--<view wx:if="{{original_premium_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{original_premium_hintid}}"></view>-->
                 <view class="clear"></view>
                 </view>
 
                 <view class="pro-detial-mess-row">
                     <view class="messlable">保费收入排名</view>
                     <view class="messcon">{{original_premium_ranking}}位</view>
-					<view wx:if="{{original_premium_ranking_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{original_premium_ranking_hintid}}"></view>
+					<!--<view wx:if="{{original_premium_ranking_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{original_premium_ranking_hintid}}"></view>-->
                 <view class="clear"></view>
                 </view>
 
                 <view class="pro-detial-mess-row">
                     <view class="messlable">市场占有率</view>
                     <view class="messcon">{{original_premium_market_pct}}%</view>
-					<view wx:if="{{original_premium_market_pct_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{original_premium_market_pct_hintid}}"></view>
+					<!--<view wx:if="{{original_premium_market_pct_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{original_premium_market_pct_hintid}}"></view>-->
                 </view>
             <view class="clear"></view>
             </view>
@@ -70,28 +70,28 @@
                 <view class="pro-detial-mess-row">
                     <view class="messlable">偿付能力评估季度</view>
                     <view class="messcon">{{solvency_valuation_quarter}}</view>
-					<view wx:if="{{solvency_valuation_quarter_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{solvency_valuation_quarter_hintid}}"></view>
+					<!--<view wx:if="{{solvency_valuation_quarter_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{solvency_valuation_quarter_hintid}}"></view>-->
                 <view class="clear"></view>
                 </view>
 
                 <view class="pro-detial-mess-row">
                     <view class="messlable">核心偿付能力充足率</view>
                     <view class="messcon">{{core_solvency_adequacy_ratio}}%</view>
-					<view wx:if="{{core_solvency_adequacy_ratio_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{core_solvency_adequacy_ratio_hintid}}"></view>
+					<!--<view wx:if="{{core_solvency_adequacy_ratio_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{core_solvency_adequacy_ratio_hintid}}"></view>-->
                 <view class="clear"></view>
                 </view>
 
                 <view class="pro-detial-mess-row">
                     <view class="messlable">综合偿付能力充足率</view>
                     <view class="messcon">{{comp_solvency_adequacy_ratio}}%</view>
-					<view wx:if="{{comp_solvency_adequacy_ratio_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{comp_solvency_adequacy_ratio_hintid}}"></view>
+					<!--<view wx:if="{{comp_solvency_adequacy_ratio_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{comp_solvency_adequacy_ratio_hintid}}"></view>-->
                 <view class="clear"></view>
                 </view>
 
                 <view class="pro-detial-mess-row">
                     <view class="messlable">风险综合评级</view>
                     <view class="messcon">{{solvency_rating}}</view>
-					<view wx:if="{{solvency_rating_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{solvency_rating_hintid}}"></view>
+					<!--<view wx:if="{{solvency_rating_hintid !== undefined}}" class="mess-iconaa" bindtap="toExplaination" data-tid="{{solvency_rating_hintid}}"></view>-->
                 <view class="clear"></view>
                 </view>
             <view class="clear"></view>
