--- a/pages/product-grade/product-grade.wxml
+++ b/pages/product-grade/product-grade.wxml
@@ -1,65 +1,57 @@
 <!--pages/product-grade/product-grade.wxml-->
 <view class="padding-bottom">
-    <view class="pro-company-name posi-fixed-top"><view class="productname padd-lr-30" >{{product}}</view></view>
-    <view class="part-white padd-lr-30 padding-bot20 margin-top120">
-		
-        <view class="company-info-row posi-rela">
-            <view class="gradeable">产品综合评分</view>
-            <view class="gradecon">{{product_score}}分</view>
-			<view class="mess-iconaa" bindtap="toExplaination" data-tid="{{product_score_hintid}}"></view>
+    <view class="pro-company-name">
+        <view class="productname padd-lr-30" >
+            {{product}}
+            <view class="company-info-row posi-rela">
+                <view class="gradecon">
+                    <view wx:if="{{rating_star === '未有评级'}}" class="no-grade">{{rating_star}}</view>
+                    <image wx:else src="{{rating_star}}"></image>
+                </view>
+                <view class="insured_cover gradecon" wx:if="{{insured_cover_icon.length}}">
+                    保障
+                    <image wx:for="{{insured_cover_icon}}" src="{{item}}"></image>
+                </view>
+            </view>
+            <view class="product-item-con">
+                <view class="type">{{product_structure}}</view>
+                <view class="span-item">{{insurer}}</view>
+                <view class="span-item">{{product_class}}</view>
+                <view class="clear"></view>
+            </view>
         </view>
-        <view class="company-info-row posi-rela">
-            <view class="gradeable">产品综合评级</view>
-            <view class="gradecon"><image src="https://resource.wenme.cc/static/images/star{{product_rating}}.png" ></image></view>
-			<view class="mess-iconaa" bindtap="toExplaination" data-tid="{{product_rating_hintid}}"></view>
-        </view>
-		
-		
-	    <view class="clear"></view>
-	</view>
+    </view>
+    <!--<view class="part-white padd-lr-30 padding-bot20 margin-top120">-->
+		<!---->
+        <!--<view class="company-info-row posi-rela">-->
+            <!--<view class="gradeable">产品综合评分</view>-->
+            <!--<view class="gradecon">{{product_score}}分</view>-->
+			<!--<view class="mess-iconaa" bindtap="toExplaination" data-tid="{{product_score_hintid}}"></view>-->
+        <!--</view>-->
+        <!--<view class="company-info-row posi-rela">-->
+            <!--<view class="gradeable">产品综合评级</view>-->
+            <!--<view class="gradecon"><image src="https://resource.wenme.cc/static/images/star{{product_rating}}.png" ></image></view>-->
+			<!--<view class="mess-iconaa" bindtap="toExplaination" data-tid="{{product_rating_hintid}}"></view>-->
+        <!--</view>-->
+		<!---->
+		<!---->
+	    <!--<view class="clear"></view>-->
+	<!--</view>-->
 
     
 
 
     <view class="pro-detial-mess">
         <view class="pro-detial-mess-tit">
-            <view class="proli-item">保险责任</view>
+            <view class="proli-item">保障</view>
         </view>
 
         <view class="padd-lr-30">
 
-            <view class="pro-detial-mess-row" wx:if="{{life_benefit_count}}">
-                <view class="pro-duty-aa"><image src="https://resource.wenme.cc/static/images/insur-icona.png" ></image></view>
-                <view class="pro-duty-bb">人寿</view>
-                <view class="pro-duty-cc" data-code="1" bindtap="toZeren">{{life_benefit_count}}项保险金</view>
-                <view class="clear"></view>
-            </view>
-
-            <view class="pro-detial-mess-row" wx:if="{{disease_benefit_count}}">
-                <view class="pro-duty-aa"><image src="https://resource.wenme.cc/static/images/insur-iconb.png" ></image></view>
-                <view class="pro-duty-bb">疾病</view>
-                <view class="pro-duty-cc" data-code="2" bindtap="toZeren">{{disease_benefit_count}}项保险金</view>
-                <view class="clear"></view>
-            </view>
-
-            <view class="pro-detial-mess-row" wx:if="{{accident_benefit_count}}">
-                <view class="pro-duty-aa"><image src="https://resource.wenme.cc/static/images/insur-iconf.png" ></image></view>
-                <view class="pro-duty-bb">意外</view>
-                <view class="pro-duty-cc" data-code="3" bindtap="toZeren">{{accident_benefit_count}}项保险金</view>
-                <view class="clear"></view>
-            </view>
-
-            <view class="pro-detial-mess-row" wx:if="{{medical_benefit_count}}">
-                <view class="pro-duty-aa"><image src="https://resource.wenme.cc/static/images/insur-icond.png" ></image></view>
-                <view class="pro-duty-bb">医疗</view>
-                <view class="pro-duty-cc" data-code="4" bindtap="toZeren">{{medical_benefit_count}}项保险金</view>
-                <view class="clear"></view>
-            </view>
-			
-			<view class="pro-detial-mess-row" wx:if="{{saving_benefit_count}}">
-                <view class="pro-duty-aa"><image src="https://resource.wenme.cc/static/images/insur-icone.png" ></image></view>
-                <view class="pro-duty-bb">储蓄</view>
-                <view class="pro-duty-cc" data-code="5" bindtap="toZeren">{{saving_benefit_count}}项保险金</view>
+            <view class="pro-detial-mess-row" wx:for="{{benefits}}">
+                <view class="pro-duty-aa"><image src="{{item[0]}}" ></image></view>
+                <view class="pro-duty-bb">{{item[1]}}</view>
+                <view class="pro-duty-cc" data-code="{{item[3]}}" data-type="{{item[1]}}" bindtap="toDisease">{{item[2]}}</view>
                 <view class="clear"></view>
             </view>
 
@@ -91,7 +83,7 @@
         <!--<view class="clear"></view>-->
     <!--</view>-->
 
-    <view class="pro-detial-mess">
+    <!--<view class="pro-detial-mess">
         <view class="pro-detial-mess-tit">
             <view class="proli-item">重要条款</view>
         </view>
@@ -110,7 +102,51 @@
                 <view class="clear"></view>
             </view>
 
-            
+
+            <view class="clear"></view>
+        </view>
+
+        <view class="clear"></view>
+    </view>-->
+
+    <view class="pro-detial-mess">
+        <view class="pro-detial-mess-tit">
+            <view class="proli-item">理赔</view>
+        </view>
+
+        <view class="padd-lr-30">
+
+            <view class="pro-detial-mess-row">
+                <view class="pro-duty-bb">保险金申请资料</view>
+                <view class="pro-duty-cc" bindtap="toZerenchuwai"></view>
+                <view class="clear"></view>
+            </view>
+
+            <view class="pro-detial-mess-row">
+                <view class="pro-duty-bb">事故通知期限</view>
+                <view class="pro-duty-dd">{{acc_notify_period}}</view>
+                <view class="clear"></view>
+            </view>
+
+            <view class="pro-detial-mess-row">
+                <view class="pro-duty-bb">保险金批核期限</view>
+                <view class="pro-duty-dd">{{benefit_approval_period}}</view>
+                <view class="clear"></view>
+            </view>
+
+            <view class="pro-detial-mess-row">
+                <view class="pro-duty-bb">保险金给付期限</view>
+                <view class="pro-duty-dd">{{benefit_delivered_period}}</view>
+                <view class="clear"></view>
+            </view>
+
+            <view class="pro-detial-mess-row">
+                <view class="pro-duty-bb">诉讼时效</view>
+                <view class="pro-duty-dd">{{litigation_period}}</view>
+                <view class="clear"></view>
+            </view>
+
+
             <view class="clear"></view>
         </view>
 
