feat: ”产品评级“增加了理赔板块，因此增加了”保险金申请资料“页

--- a/app.wxss
+++ b/app.wxss
@@ -117,6 +117,10 @@ page {
   background:#fff;
   font-size: 34rpx;
 }
+
+.pro-detial-mess.first {
+  margin-top: 220rpx;
+}
 .pro-detial-messa {
   background:#fff;
   font-size: 34rpx;
